Fixed clipping on social icons

--- a/styles/src/style.scss
+++ b/styles/src/style.scss
@@ -315,30 +315,30 @@ embed, iframe, object {
 	}
 	.no-touch & a:hover {
 		color: $text-color;
-		text-shadow: 0 1px 0 #ccc,
-               0 2px 0 #c9c9c9,
-               0 3px 0 #bbb,
-               0 4px 0 #b9b9b9,
-               0 5px 0 #aaa,
-               0 6px 1px rgba(0,0,0,.1),
-               0 0 5px rgba(0,0,0,.1),
-               0 1px 3px rgba(0,0,0,.3),
-               0 3px 5px rgba(0,0,0,.2),
-               0 5px 10px rgba(0,0,0,.25),
-               0 10px 10px rgba(0,0,0,.2),
+		text-shadow: 0 1px 0 #CCC,
+		0 2px 0 #C9C9C9,
+		0 3px 0 #BBB,
+		0 4px 0 #B9B9B9,
+		0 5px 0 #AAA,
+		0 6px 1px rgba(0,0,0,0.1),
+		0 0 5px rgba(0,0,0,0.1),
+		0 1px 3px rgba(0,0,0,0.3),
+		0 3px 5px rgba(0,0,0,0.2),
+		0 5px 10px rgba(0,0,0,0.25),
+		0 10px 10px rgba(0,0,0,0.2),;
 	}
 	.no-touch & a:active {
 		color: $text-color;
-		text-shadow: 0 1px 0 #ccc,
-               0 2px 0 #c9c9c9,
-               0 3px 0 #bbb,
-               0 4px 0 #b9b9b9,
-               0 5px 0 #aaa,
-               0 6px 1px rgba(0,0,0,.1),
-               0 0 5px rgba(0,0,0,.1),
-               0 1px 3px rgba(0,0,0,.3),
-               0 3px 5px rgba(0,0,0,.2),
-               0 5px 10px rgba(0,0,0,.25),
+		text-shadow: 0 1px 0 #CCC,
+		0 2px 0 #C9C9C9,
+		0 3px 0 #BBB,
+		0 4px 0 #B9B9B9,
+		0 5px 0 #AAA,
+		0 6px 1px rgba(0,0,0,0.1),
+		0 0 5px rgba(0,0,0,0.1),
+		0 1px 3px rgba(0,0,0,0.3),
+		0 3px 5px rgba(0,0,0,0.2),
+		0 5px 10px rgba(0,0,0,0.25),;
 	}
 }
 
@@ -391,6 +391,7 @@ embed, iframe, object {
 	}
 	svg,
 	img {
+		overflow: visible;
 		width: 2em;
 		height: 2em;
 	}
